tests/baselines/reference/tsxAttributeResolution8.errors.txt
file.tsx(1,16): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== file.tsx (1 errors) ====
    declare module JSX {
                   ~~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
    	interface Element { }
    	interface IntrinsicElements {
    		test1: {x: string};
    	}
    }
    
    var x: any;
    // Should be OK
    <test1 {...x} />